--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "da8c3e36",
+   "id": "a077952e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4eedaf6c",
+   "id": "4d5031f8",
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc20b71d",
+   "execution_count": 12,
+   "id": "b6f6f8e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "4c72246f",
+   "execution_count": 13,
+   "id": "4669e186",
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "329d97e4",
+   "execution_count": 14,
+   "id": "e34046a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "20111d23",
+   "execution_count": 15,
+   "id": "602c799f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5aaf0b79",
+   "execution_count": 16,
+   "id": "9a8125d7",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,8 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "61f7cb01",
+   "execution_count": 17,
+   "id": "d4ee9161",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "200"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5d025ba3",
+   "execution_count": 18,
+   "id": "5009b621",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6d3aedcd",
+   "execution_count": 19,
+   "id": "9cc8c98c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "434d544a",
+   "execution_count": 20,
+   "id": "231385f5",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "14ae6bf0",
    "metadata": {},
    "outputs": [],
@@ -343,17 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7f3f9ddb",
+   "execution_count": 22,
+   "id": "24d44c97",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":721,\"main\":\"Haze\",\"description\":\"haze\",\"icon\":\"50d\"},{\"id\":711,\"main\":\"Smoke\",\"description\":\"smoke\",\"icon\":\"50d\"}],\"base\":\"stations\",\"main\":{\"temp\":84.33,\"feels_like\":88.36,\"temp_min\":79.32,\"temp_max\":88.09,\"pressure\":1010,\"humidity\":61},\"visibility\":8047,\"wind\":{\"speed\":8.01,\"deg\":329,\"gust\":14},\"clouds\":{\"all\":75},\"dt\":1626817212,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1626773111,\"sunset\":1626826540},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":802,\"main\":\"Clouds\",\"description\":\"scattered clouds\",\"icon\":\"03d\"}],\"base\":\"stations\",\"main\":{\"temp\":78.1,\"feels_like\":78.15,\"temp_min\":72.37,\"temp_max\":82.15,\"pressure\":1017,\"humidity\":54},\"visibility\":10000,\"wind\":{\"speed\":1.99,\"deg\":326,\"gust\":10},\"clouds\":{\"all\":40},\"dt\":1626983580,\"sys\":{\"type\":2,\"id\":2009921,\"country\":\"US\",\"sunrise\":1626946022,\"sunset\":1626999241},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,8 +365,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfa8f303",
+   "execution_count": 23,
+   "id": "cf3e7b28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,39 +377,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e0c537a6",
+   "execution_count": 24,
+   "id": "b464c97c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 721, 'main': 'Haze', 'description': 'haze', 'icon': '50d'},\n",
-       "  {'id': 711, 'main': 'Smoke', 'description': 'smoke', 'icon': '50d'}],\n",
+       " 'weather': [{'id': 802,\n",
+       "   'main': 'Clouds',\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 84.33,\n",
-       "  'feels_like': 88.36,\n",
-       "  'temp_min': 79.32,\n",
-       "  'temp_max': 88.09,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 61},\n",
-       " 'visibility': 8047,\n",
-       " 'wind': {'speed': 8.01, 'deg': 329, 'gust': 14},\n",
-       " 'clouds': {'all': 75},\n",
-       " 'dt': 1626817212,\n",
+       " 'main': {'temp': 78.1,\n",
+       "  'feels_like': 78.15,\n",
+       "  'temp_min': 72.37,\n",
+       "  'temp_max': 82.15,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 54},\n",
+       " 'visibility': 10000,\n",
+       " 'wind': {'speed': 1.99, 'deg': 326, 'gust': 10},\n",
+       " 'clouds': {'all': 40},\n",
+       " 'dt': 1626983580,\n",
        " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       "  'id': 2009921,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1626773111,\n",
-       "  'sunset': 1626826540},\n",
+       "  'sunrise': 1626946022,\n",
+       "  'sunset': 1626999241},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,8 +423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5d375b1e",
+   "execution_count": 25,
+   "id": "60619fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d2d7a8dc",
+   "execution_count": 26,
+   "id": "5ab4796e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "016cc994",
+   "execution_count": 27,
+   "id": "978d67e0",
    "metadata": {},
    "outputs": [
     {
@@ -469,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "74476606",
+   "execution_count": 28,
+   "id": "4adb9fab",
    "metadata": {},
    "outputs": [
     {
@@ -493,8 +495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5f135dd1",
+   "execution_count": 29,
+   "id": "32787708",
    "metadata": {},
    "outputs": [
     {
@@ -511,8 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a5e7639b",
+   "execution_count": 30,
+   "id": "7b5f35b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,8 +523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "0079dfd8",
+   "execution_count": 31,
+   "id": "038783d8",
    "metadata": {},
    "outputs": [
     {
@@ -545,41 +547,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1974e540",
+   "execution_count": 32,
+   "id": "52eb03ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 801,\n",
+       " 'weather': [{'id': 802,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02d'}],\n",
+       "   'description': 'scattered clouds',\n",
+       "   'icon': '03d'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 83.97,\n",
-       "  'feels_like': 88.02,\n",
-       "  'temp_min': 78.94,\n",
-       "  'temp_max': 87.84,\n",
-       "  'pressure': 1010,\n",
-       "  'humidity': 62},\n",
+       " 'main': {'temp': 78.1,\n",
+       "  'feels_like': 78.15,\n",
+       "  'temp_min': 72.37,\n",
+       "  'temp_max': 82.15,\n",
+       "  'pressure': 1017,\n",
+       "  'humidity': 54},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 7, 'deg': 296, 'gust': 11.99},\n",
-       " 'clouds': {'all': 19},\n",
-       " 'dt': 1626818138,\n",
+       " 'wind': {'speed': 1.99, 'deg': 326, 'gust': 10},\n",
+       " 'clouds': {'all': 40},\n",
+       " 'dt': 1626983580,\n",
        " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       "  'id': 2009921,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1626773111,\n",
-       "  'sunset': 1626826540},\n",
+       "  'sunrise': 1626946022,\n",
+       "  'sunset': 1626999241},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,8 +595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95d5bf1c",
+   "execution_count": 33,
+   "id": "43316938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "72bf7a3c",
+   "execution_count": 34,
+   "id": "72598db1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,21 +619,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6bb99a6b",
+   "execution_count": 35,
+   "id": "c76df63b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'type': 2,\n",
-       " 'id': 2013408,\n",
+       " 'id': 2009921,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1626773111,\n",
-       " 'sunset': 1626826540}"
+       " 'sunrise': 1626946022,\n",
+       " 'sunset': 1626999241}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,8 +646,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "26b1213e",
+   "execution_count": 36,
+   "id": "909db892",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +656,7 @@
        "'US'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,17 +668,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "c23d70d2",
+   "execution_count": 37,
+   "id": "c00929c5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1626818138"
+       "1626983580"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,8 +691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "4ee888e8",
+   "execution_count": 38,
+   "id": "5d563c20",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +701,7 @@
        "42.3584"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,17 +713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "6e3abf50",
+   "execution_count": 39,
+   "id": "cdc15334",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "87.84"
+       "82.15"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,15 +735,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f0793696",
+   "execution_count": 40,
+   "id": "815fe79d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 87.84 62 19 7\n"
+      "42.3584 -71.0598 82.15 54 40 1.99\n"
      ]
     }
    ],
@@ -760,8 +762,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2aff191e",
+   "execution_count": 41,
+   "id": "d121cc89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,8 +772,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2db1eec",
+   "execution_count": 42,
+   "id": "5c26b2a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,17 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "6b9a6cd0",
+   "execution_count": 43,
+   "id": "a837f7cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 7, 20, 21, 55, 38)"
+       "datetime.datetime(2021, 7, 22, 19, 53)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,17 +810,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "9aca2f14",
+   "execution_count": 44,
+   "id": "8792a361",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2021-07-20 21:55:38'"
+       "'2021-07-22 19:53:00'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +836,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad8551ad",
+   "id": "daf906a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Plot Latitude vs. Temperature ####\n",
+    "\n",
+    "# We'll create scatter plots for latitude vs. maximum temperature, humidity, cloudiness, and wind speed. \n",
+    "#  The first, latitude vs. maximum temperature, should look like the following scatter plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc0cc07c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Get Data for Plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "11331726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1626984064.2322936"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module\n",
+    "import time\n",
+    "\n",
+    "# Get today's date in seconds\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "161b9659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The format for time appears like the datetime stamp for the JSON weather data. \n",
+    "# We can convert this using the string format method, strftime() and pass the formatting parameters for our date in\n",
+    "#  parentheses. To get the format for today, we can add %x inside the parentheses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "51934267",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'07/22/21'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f88965cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -842,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2dbb83e",
+   "id": "77611d99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -850,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57c46a58",
+   "id": "45b49527",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -858,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770f3bc4",
+   "id": "70ab9471",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -866,47 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5a7379",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b51644c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb8f7b03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcabcd6e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5713ab72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c7b3abf",
+   "id": "6587983a",
    "metadata": {},
    "outputs": [],
    "source": []
